Volume sliders are misaligned (for some translations / font settings)
When the names/labels of the speakers are long (which depends on the translation and the font size used), the volume sliders are misaligned. That is, they are not equally long (their right sides are aligned, but not the left sides, so they’re not of equal width). This leads to the volume control slider knobs not being aligned when the volumes are set at the same level.
Here’s attach a screenshot (for the Norwegian Nynorsk translation) illustrating the problem (all levels are set at 75%).
I don’t thinking making more room for the speaker labels by default would be a good solution. For the (relatively short) English strings, there is already too much space between the labels and the sliders, IMHO. Would it perhaps be possible to have the labels right-aligned (so that they’re always right next to the corresponding sliders) and ‘grow’ to the left.